# safe-mmio

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
app/source/: app_main.cpp  main.cpp
app/tests/: CMakeLists.txt  test_app.cpp
libs/: CMakeLists.txt
libs/mmio/: CMakeLists.txt
libs/mmio/api/: mmio.hpp  mmio_atomic.hpp  mmio_core.hpp  mmio_irq_guard.hpp  mmio_peripheral.hpp  mmio_register.hpp  mmio_register_block.hpp
libs/mmio/docs/: 01-arch.md  02-usage.md  usage.md
libs/mmio/tests/: CMakeLists.txt  test_Register.cpp
libs/mmio/tests/mocks/include/: Mock_Register.hpp
libs/mmio/tests/mocks/source/: Mock_Register.cpp
libs/startup/: CMakeLists.txt  STM32F429ZITx.ld
libs/startup/source/: startup_stm32f429zi.cpp
libs/systick/: CMakeLists.txt
libs/systick/api/: systick.h
libs/systick/source/: systick.cpp
libs/systick/tests/: CMakeLists.txt  test_systick.cpp
libs/systick/tests/mocks/include/: Mock_Systick.h
libs/systick/tests/mocks/source/: Mock_Systick.cpp
tools/cmake/: arm-none-eabi-gcc.cmake
