set(SUBMODULE_TESTS_NAME tests_systick_drv)
set(SUBMODULE_TESTS_DEPS systickdrv mmr)

set(SUBMODULE_TESTS_MOCK_INC_DIR ${CMAKE_CURRENT_LIST_DIR}/mocks/include)
set(SUBMODULE_TESTS_FAKES_INC_DIR ${CMAKE_CURRENT_LIST_DIR}/fakes/include)
set(SUBMODULE_TESTS_MOCK_SRC_DIR ${CMAKE_CURRENT_LIST_DIR}/mocks/source)
set(SUBMODULE_TESTS_FAKES_SRC_DIR ${CMAKE_CURRENT_LIST_DIR}/fakes/source)
set(SUBMODULE_TESTS_SRC_DIR ${CMAKE_CURRENT_LIST_DIR})

include(GoogleTest)

file(GLOB SUBMODULE_TESTS_MOCK_SRC_FILES ${SUBMODULE_TESTS_MOCK_SRC_DIR}/*.cpp)
file(GLOB SUBMODULE_TESTS_FAKES_SRC_FILES ${SUBMODULE_TESTS_FAKES_SRC_DIR}/*.cpp)
file(GLOB SUBMODULE_TESTS_SRC_FILES ${SUBMODULE_TESTS_SRC_DIR}/*.cpp)

add_executable(${SUBMODULE_TESTS_NAME})

target_include_directories(${SUBMODULE_TESTS_NAME}
    PRIVATE
        ${CMAKE_CURRENT_LIST_DIR}/../api
        ${CMAKE_CURRENT_LIST_DIR}/../include
        ${SUBMODULE_TESTS_MOCK_INC_DIR}
        ${SUBMODULE_TESTS_FAKES_INC_DIR}
)

target_sources(${SUBMODULE_TESTS_NAME}
    PRIVATE
        ${SUBMODULE_TESTS_MOCK_SRC_FILES}
        ${SUBMODULE_TESTS_FAKES_SRC_FILES}
        ${SUBMODULE_TESTS_SRC_FILES}
)

target_link_libraries(${SUBMODULE_TESTS_NAME} PRIVATE ${SUBMODULE_TESTS_DEPS} gmock_main gtest_main gmock gtest)

gtest_discover_tests(${SUBMODULE_TESTS_NAME})

if (CMAKE_BUILD_TYPE STREQUAL "Coverage")
    target_compile_options(${SUBMODULE_TESTS_NAME} PRIVATE --coverage)
    target_link_options(${SUBMODULE_TESTS_NAME} PRIVATE --coverage)
endif()
